// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader.Toc Component renders correctly 1`] = `
<span>
  <div
    className="toc-drawer"
  >
    <div
      className="edge-lock-scroll"
    >
      <div
        className="drawer-reader left"
      >
        <nav
          className="table-of-contents"
        >
          <ul
            className="toc-list"
          >
            <li>
              <a
                className={null}
                data-id="hide-drawer"
                href="/read/slug-1/section/undefined#function anchor() { [native code] }"
                onClick={[Function]}
              />
            </li>
            <li>
              <a
                className={null}
                data-id="hide-drawer"
                href="/read/slug-1/section/undefined#function anchor() { [native code] }"
                onClick={[Function]}
              />
            </li>
          </ul>
          <div
            className="toc-footer"
          >
            <button
              onClick={[Function]}
            >
              <h4>
                <i
                  className="manicon manicon-i-round"
                />
                About This Text
              </h4>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</span>
`;

exports[`Reader.Toc Component renders correctly with empty toc 1`] = `
<span>
  <div
    className="toc-drawer"
  >
    <div
      className="edge-lock-scroll"
    >
      <div
        className="drawer-reader left"
      >
        <nav
          className="table-of-contents"
        >
          <div
            className="toc-empty"
          >
            This text does not have a table of contents.
          </div>
          <hr />
          <div
            className="toc-footer"
          >
            <button
              onClick={[Function]}
            >
              <h4>
                <i
                  className="manicon manicon-i-round"
                />
                About This Text
              </h4>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</span>
`;
